tests/baselines/reference/YieldExpression9_es6.errors.txt
error TS2318: Cannot find global type 'IterableIterator'.
tests/cases/conformance/es6/yieldExpressions/YieldExpression9_es6.ts(2,9): error TS2304: Cannot find name 'foo'.


!!! error TS2318: Cannot find global type 'IterableIterator'.
==== tests/cases/conformance/es6/yieldExpressions/YieldExpression9_es6.ts (1 errors) ====
    var v = function*() {
      yield(foo);
            ~~~
!!! error TS2304: Cannot find name 'foo'.
    }